--- a/src/assets/style/normalize.scss
+++ b/src/assets/style/normalize.scss
@@ -167,6 +167,9 @@ body {
   margin      : 0;
   padding     : 0;
   position    : relative;
-  background-color: $grey-03;
-  font-family:  "Roboto", sans-serif;
+  font-family : Passion, sans-serif;
+  font-weight : 400;
+  background  : #3494E6; /* fallback for old browsers */
+  background  : -webkit-linear-gradient(to right, #EC6EAD, #3494E6); /* Chrome 10-25, Safari 5.1-6 */
+  background  : linear-gradient(to right, #EC6EAD, #3494E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
