--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -6,17 +6,18 @@ $green-01              : #F2F8E1;
 $yellow                : #FFD333;
 $orange                : #FFA800;
 $orange-pie            : #FFB677;
-$pink                  : #F38CAF;
+$pink                  : #EC7A9C;
 $red                   : #FB4C4C;
 $red-dark              : rgba(255, 46, 46, 1);
 $purple                : #9253E2;
+$turquoise             : #0F9AB9FF;
 $blue                  : #459dea;
-$blue-dark             : #6B85BF;
+$blue-dark             : #121FCF;
 $blue-light            : #80CAFF;
 $black                 : #000000;
 $white                 : #ffffff;
-
-$grey-base             : #3D464D;
+$box-shadow-black      : rgba(0, 0, 0, 0.1);
+$grey-base             : rgba(255, 255, 255, 0.23);
 $grey-10               : #EAEAED;
 $grey-03               : #F5F5F5;
 $grey-05               : #b1b1b2;
@@ -49,6 +50,7 @@ $font-size-28          : 28px;
 $font-size-32          : 32px;
 $font-size-40          : 40px;
 $font-size-48          : 48px;
+$font-size-50          : 50px;
 
 
 //page withs
