--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -13,3 +13,8 @@
   font-family : Passion;
   font-weight : 400;
 }
+@font-face {
+  src         : url('../fonts/PriceDow.otf');
+  font-family : PriceDow;
+  font-weight : 400;
+}
