reload img and text media

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -48,9 +48,11 @@ $font-size-20          : 20px;
 $font-size-24          : 24px;
 $font-size-28          : 28px;
 $font-size-32          : 32px;
+$font-size-36          : 36px;
 $font-size-40          : 40px;
 $font-size-48          : 48px;
 $font-size-50          : 50px;
+
 
 
 //page withs
