--- a/src/Pages/Header/style.scss
+++ b/src/Pages/Header/style.scss
@@ -13,25 +13,39 @@
   -webkit-backdrop-filter : blur(14px);
   z-index                 : 9999;
   @include screen-max-width-991 {
-	width  : 30%;
-	left   : unset;
-	right  : 0;
-	bottom : 0;
+	width      : 49%;
+	height     : 100%;
+	display    : flex;
+	left       : unset;
+	right      : 0;
+	bottom     : 0;
+	transform  : translateX(100%);
+	transition : 0.3s all;
   }
+
   .L-header-wrapper {
 	padding : 20px 0;
 	width   : 100%;
 	@include screen-max-width-991 {
+	  display        : flex;
 	  flex-direction : column;
-	  align-items    : flex-start;
+	  align-items    : center;
 	}
+	//.L-languages-cont {
+	//  position : absolute;
+	//  right    : 10px;
+	//  @include screen-max-width-991 {
+	//	position : unset;
+	//  }
+	//}
+
   }
 
   .L-logo-container {
 	width  : max-content;
 	height : 50px;
 	@include screen-max-width-991 {
-	  align-self : center;
+	  justify-self : start;
 	}
 
 	.L-logo {
@@ -63,60 +77,101 @@
 	.L-nav-lists {
 	  width : 100%;
 	  @include screen-max-width-991 {
-		margin         : 200px 0 100px 0;
 		flex-direction : column;
 		align-items    : center;
 	  }
 
 	  li {
-		cursor   : pointer;
-		position : relative;
+		cursor : pointer;
 
 		&:hover {
-		  justify-content: center;
-		  align-items: center;
+		  justify-content  : center;
+		  align-items      : center;
 		  background-color : green;
-		}
-
-		&:before {
-		  content  : '';
-		  position : absolute;
-		  top      : 0;
-		  left     : 5%;
-		  right    : 10%;
-		  bottom   : 1%;
-		  width    : 100%;
-		  height   : 100%;
 		}
 
 		@include screen-max-width-991 {
 		  font-size : $font-size-40;
-		  margin    : 15px 0;
-		  padding   : 15px 10px;
-
 		}
-
 		a {
 		  color          : hotpink;
 		  font-size      : $font-size-32;
-		  text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
-		  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
+		  text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000, 1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
 		  text-transform : uppercase;
+		  letter-spacing : 1px;
 		  cursor         : pointer;
-		  padding: 10px 20px;
+		  padding        : 10px 20px;
 		  @include screen-max-width-991 {
+			font-size : $font-size-40;
+
 		  }
+		}
+		.active {
+		  color : $white;
 		}
 	  }
 	}
 
-	.L-languages-cont {
-	  position : absolute;
-	  right    : 10px;
-	  @include screen-max-width-991 {
-		position : unset;
+
+  }
+}
+.L-header-active {
+  transform : translateX(0);
+}
+
+.L-burger {
+  display : none;
+  @include screen-max-width-991 {
+	display  : block;
+	position : absolute;
+	top      : 50px;
+	left     : 50px;
+	width    : 30px;
+	height   : 30px;
+	.burger-line {
+	  position         : absolute;
+	  top              : 50%;
+	  display          : block;
+	  width            : 30px;
+	  height           : 1.5px;
+	  background-color : $white;
+
+
+	  &:before {
+		content          : '';
+		position         : absolute;
+		top              : -15px;
+		width            : 100%;
+		height           : 1.5px;
+		background-color : $white;
+	  }
+
+	  &:after {
+		content          : '';
+		position         : absolute;
+		top              : 15px;
+		width            : 100%;
+		height           : 1.5px;
+		background-color : $white;
 	  }
 	}
+
+  }
+
+  .burger-active {
+	transition : 0.3s all;
+
+	transform  : rotate(135deg);
+
+	&:before {
+	  display : none;
+	}
+
+	&:after {
+	  top       : 0;
+	  transform : rotate(90deg);
+	}
+
   }
 }
 
