--- a/src/Pages/home/style.scss
+++ b/src/Pages/home/style.scss
@@ -4,10 +4,11 @@
 
 .L-home-container {
   width       : 100%;
-  height      : 100%;
-  padding-top : 150px;
+  height      : 100vh;
+  padding-top : 200px;
 
   .L-home-wrapper {
+
 	.L-img-cont {
 	  max-width     : 420px;
 	  width         : 100%;
@@ -37,21 +38,12 @@
 	  text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
 	  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
 	}
-  }
-  .L-who-i-am {
-	.L-desc-title {
-	  width : max-content;
-
-	  span {
-		font-size : $font-size-50;
-		color     : $white;
-	  }
-
-	}
-
-	p {
-	  text-align  : center;
-	  padding-top : 50px;
+	h2{
+	  margin-top: 20px;
+	  font-size : $font-size-36;
+	  color: $white;
+	  text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
+	  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
 	}
   }
 
