--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -1,5 +1,5 @@
-@import 'src/assets/style/variables';
-@import 'src/assets/style/mixin';
+@import '../../assets/style/variables';
+@import '../../assets/style/mixin';
 
 
 .L-header-container {
