--- a/src/Pages/about-me/style.scss
+++ b/src/Pages/about-me/style.scss
@@ -1,14 +1,11 @@
 .L-about-me-container {
   width       : 100%;
   height      : 100%;
-  margin-top  : 100px;
+	padding-top: 200px;
   font-family : 'JetBrains Mono', serif;
 
   .L-about-wrapper {
 	width      : 100%;
-	border     : 1px solid black;
-	margin-top : 200px;
-
 	.L-about-description {
 	  width : 100%;
 
