--- a/src/Pages/contacts/style.scss
+++ b/src/Pages/contacts/style.scss
@@ -1,114 +1,125 @@
-@import 'src/assets/style/variables';
-@import 'src/assets/style/mixin';
-@import 'src/assets/style/fonts';
+@import "../../../src/assets/style/variables";
+@import "../../../src/assets/style/mixin";
+@import "../../../src/assets/style/fonts";
 
 .L-contacts-container {
-  width       : 100%;
-  height      : 100%;
-  padding-top : 200px;
+  width: 100%;
+  height: 100%;
+  padding-top: 200px;
+  position: relative;
 
   .L-map-container {
-	position  : relative;
-	width     : 100%;
-	max-width : 500px;
-	margin    : 0 auto;
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
 
-	.L-map-box {
-	  width         : 100%;
-	  position      : relative;
-	  max-width     : 500px;
-	  height        : 500px;
-	  border        : 25px solid #f59dda;
-	  border-radius : 50%;
-	  margin        : 0 auto;
-	  overflow      : hidden;
+    .L-map-box {
+      width: 100%;
+      position: relative;
+      max-width: 600px;
+      height: 600px;
+      border: 25px solid #f59dda;
+      border-radius: 50%;
+      margin: 0 auto;
+      overflow: hidden;
 
-	  .L-map {
-		width     : 550px;
-		height    : 550px;
-		transform : scale(1.2);
-	  }
-	}
+      .L-map {
+        width: 550px;
+        height: 550px;
+        transform: scale(1.2);
+      }
+    }
 
-	.L-map-compass {
-	  width            : 50px;
-	  height           : 50px;
-	  border-radius    : 50%;
-	  position         : absolute;
-	  font-family      : SansSerif, serif;
-	  top              : -10px;
-	  background-color : black;
-	  color            : white;
-	  font-size        : 40px;
-	  z-index          : 1;
-	}
+    .L-map-compass {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      position: absolute;
+      font-family: SansSerif, serif;
+      top: -10px;
+      background-color: black;
+      color: white;
+      font-size: 40px;
+      z-index: 1;
+    }
 
-	.L-map-mission {
-	  position            : absolute;
-	  left                : -15px;
-	  color               : white;
-	  font-family         : Passion, serif;
-	  -webkit-text-stroke : 2px black;
-	  font-size           : 80px;
-	  z-index             : 1;
-	}
-
+    .L-map-mission {
+      position: absolute;
+      left: -15px;
+      color: white;
+      font-family: Passion, serif;
+      -webkit-text-stroke: 2px black;
+      font-size: 80px;
+      z-index: 1;
+    }
   }
 
   .L-contacts-box {
-	width     : max-content;
-	margin    : 35px auto;
-	font-size : 30px;
+    position: absolute;
+    top: 150px;
+    right: 20px;
+    width: max-content;
+    font-size: 30px;
+    border: 1px solid black;
 
-	.L-tel-number {
-	  .tel {
-		-webkit-text-stroke : 1px black;
-		color               : white;
-		margin              : 0 10px;
+    .L-tel-number {
+      .tel {
+        -webkit-text-stroke: 1px black;
+        color: white;
+        margin: 0 10px;
 
-		i {
-		  color        : #00ff00;
-		  font-size    : 25px;
-		  margin-right : 5px;
-		}
-	  }
+        i {
+          color: #00ff00;
+          font-size: 25px;
+          margin-right: 5px;
+        }
+      }
 
-	  .telegram {
-		color               : #0066ff;
-		-webkit-text-stroke : .7px black;
+      .telegram {
+        color: #0066ff;
+        -webkit-text-stroke: 0.7px black;
 
-		i {
-		  font-size        : 25px;
-		  background-color : white;
-		  border-radius    : 50%;
-		}
-	  }
-	}
+        i {
+          font-size: 25px;
+          background-color: white;
+          border-radius: 50%;
+        }
+      }
+    }
 
-	.L-socials-cont {
-	  margin-top : 15px;
-	  a  {
-		margin : 0 15px;
-		overflow: hidden;
-		transform:scale(1.2);
-	  }
-	  .L-gmail-logo{
-		font-size: 30px;
-		&:hover{
-		  background-color : white;
-		}
-	  }
-	  .Github {
-		color : black;
-		&:hover{
-		  background-color : white;
-		}
-	  }
-	  .L-linkedin-icon{
-		&:hover{
-		  background-color : white;
-		}
-	  }
-	}
+    .L-socials-cont {
+      margin-top: 15px;
+
+      a {
+        margin: 0 15px;
+        overflow: hidden;
+        transform: scale(1.2);
+      }
+
+      .L-gmail-logo {
+        font-size: 30px;
+        padding: 0 2px;
+
+        &:hover {
+          border-radius: 5px;
+          background-color: white;
+        }
+      }
+
+      .Github {
+        color: black;
+
+        &:hover {
+          color: white;
+        }
+      }
+
+      .L-linkedin-icon {
+        &:hover {
+          color: white;
+        }
+      }
+    }
   }
 }
