--- a/src/Pages/skills/style.scss
+++ b/src/Pages/skills/style.scss
@@ -1,46 +1,105 @@
-@import '../../assets/style/variables';
-@import '../../assets/style/mixin';
-
+@import "../../assets/style/variables";
+@import "../../assets/style/mixin";
 
 .L-skills-wrapper {
-  padding-top : 200px;
+  padding-top: 150px;
+  width: 100%;
+  height: 100vh;
 
   .L-skills-container {
-	width  : max-content;
-	margin : 0 auto;
+    margin: 0 auto;
 
-	.L-skills-box {
-	  width                   : 500px;
-	  height                  : 600px;
-	  border-radius           : 25px 0 25px 25px;
-	  border                  : 1px solid white;
-	  background              : rgb(236, 110, 173);
-	  background              : linear-gradient(90deg, rgba(236, 110, 173, 1) 0%, rgba(52, 148, 230, 1) 100%);
-	  background              : rgba(255, 255, 255, 0.05);
-	  box-shadow              : 0 4px 30px rgba(0, 0, 0, 0.1);
-	  backdrop-filter         : blur(13.8px);
-	  -webkit-backdrop-filter : blur(13.8px);
+    .L-skills-box {
+      width: 50%;
+      border-radius: 25px;
+      background: rgba(255, 255, 255, 0.03);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.71);
+      backdrop-filter: blur(13.8px);
+      -webkit-backdrop-filter: blur(13.8px);
 
-	  .L-logo-box {
-		width    : max-content;
-		height   : max-content;
-		position : relative;
+      .L-logo-box {
+        width: 85%;
+        margin: 20px auto;
+        padding: 20px 15px;
+        height: 500px;
+        border-radius: 25px;
+        overflow: hidden;
+        background: rgba(255, 255, 255, 0.41);
+        backdrop-filter: blur(12.5px);
+        -webkit-backdrop-filter: blur(12.5px);
+        -moz-box-shadow: inset 2px 20px 50px rgba(154, 147, 140, 0.5),
+          1px 1px 50px rgba(255, 255, 255, 1);
+        -webkit-box-shadow: inset 2px 20px 50px rgba(154, 147, 140, 0.5),
+          1px 1px 50px rgba(255, 255, 255, 1);
+        box-shadow: inset 2px 20px 50px rgba(154, 147, 140, 0.5),
+          1px 1px 50px rgba(255, 255, 255, 1);
+      }
 
-		.L-skills-logo {
-		  min-height  : 500px;
-		  font-size   : 400px;
-		  padding-top : 20px;
-		  text-align  : center;
-		  margin      : 20px 0;
-		}
+      .slider-big {
+        text-align: center;
+        margin: 0 auto;
+        max-width: 400px;
+        width: 100%;
 
-		.L-skills-title {
-		  color               : white;
-		  font-size           : $font-size-40;
-		  -webkit-text-stroke : 2px #000000;
-		  letter-spacing      : 3px;
-		}
-	  }
-	}
+        .skill-animated-logo {
+          transform-style: preserve-3d;
+          transform: rotateX(0deg) rotateY(180deg);
+          animation: rotateLogo 5s linear infinite;
+          position: relative;
+
+          &:after {
+            content: "";
+            border-bottom: 10px solid rgba(#000, 0.2);
+            width: 100%;
+            position: absolute;
+            left: 0;
+            bottom: -50px;
+            border-radius: 50%;
+            filter: blur(100%);
+          }
+
+          span {
+            font-size: 300px;
+          }
+        }
+
+        .L-skill-name {
+          margin-top: 100px;
+          width: 100%;
+          font-size: 35px;
+          color: $white;
+          -webkit-text-stroke: 1px $black;
+        }
+      }
+
+      .slider-little {
+        width: 80%;
+        margin: 50px auto;
+        span {
+          display: block;
+          padding: 15px;
+		  width: max-content;
+          font-size: $font-size-50;
+          cursor: pointer;
+          background: rgba(255, 255, 255, 0.36);
+          border-radius: 5px;
+          box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+          backdrop-filter: blur(10.4px);
+          -webkit-backdrop-filter: blur(10.4px);
+        }
+      }
+    }
+  }
+}
+
+@keyframes rotateLogo {
+  0% {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: rotateX(0deg) rotateY(360deg);
+  }
+  100% {
+    transform: rotateX(0deg) rotateY(0deg);
   }
 }
