--- a/src/Pages/contacts/style.scss
+++ b/src/Pages/contacts/style.scss
@@ -62,64 +62,85 @@
     width: max-content;
     font-size: 30px;
     border: 1px solid black;
-
-    .L-tel-number {
-      .tel {
-        -webkit-text-stroke: 1px black;
-        color: white;
-        margin: 0 10px;
-
-        i {
-          color: #00ff00;
-          font-size: 25px;
-          margin-right: 5px;
-        }
+    display: flex;
+    .L-info-block{
+      margin-right: 30px;
+      .L-time-container{
+        border: 1px solid red;
+        text-align: right;
       }
-
-      .telegram {
-        color: #0066ff;
-        -webkit-text-stroke: 0.7px black;
-
-        i {
-          font-size: 25px;
-          background-color: white;
-          border-radius: 50%;
-        }
-      }
-    }
-
-    .L-socials-cont {
-      margin-top: 15px;
-
-      a {
-        margin: 0 15px;
-        overflow: hidden;
-        transform: scale(1.2);
-      }
-
-      .L-gmail-logo {
-        font-size: 30px;
-        padding: 0 2px;
-
-        &:hover {
-          border-radius: 5px;
-          background-color: white;
-        }
-      }
-
-      .Github {
-        color: black;
-
-        &:hover {
-          color: white;
-        }
-      }
-
-      .L-linkedin-icon {
-        &:hover {
-          color: white;
+  
+      .L-tel-number {
+        .tel {
+          display: flex;
+          align-items: center;
+          p {
+            -webkit-text-stroke: 1px black;
+            color: #02f79b;
+            margin: 0 10px;
+          }
+          i {
+            color: #00ff00 ;
+            -webkit-text-stroke: 1px black;
+            font-size: 25px;
+            margin-right: 5px;
+          }
         }
       }
     }
+    
+    .aaaaa{
+      width: 120px;
+      height: 100px;
+      border: 5px solid black ;
+      border-radius: 15px;
+      .L-socials-cont {
+        margin: 25px;
+        .sliderBlock{
+          border: 1px solid red;
+          width: 60px;
+        }
+        a {
+          margin: 0 15px;
+          transform: scale(1.2);
+        }
+        .Gmail {
+          color: black;
+          font-size: 30px;
+          padding: 0 2px;
+  
+          &:hover {
+            color: #d14836;
+            border-radius: 5px;
+            background-color: white;
+          }
+        }
+        .Github {
+          color: black;
+          font-size: 30px;
+          &:hover {
+            border-radius: 50px;
+            background-color: white;
+          }
+        }
+        .Linkedin {
+          color: black;
+          &:hover {
+            color: #0077b5;
+            background-color: white;
+          }
+        }
+        .Telegram {
+          color: $black;
+          font-size: 25px;
+          &:hover {
+            color: #0066ff;
+            background-color: white;
+            border-radius: 50px;
+          }
+        }
+      }
+    }
+   
   }
 }
