--- a/src/Pages/skills/style.scss
+++ b/src/Pages/skills/style.scss
@@ -12,10 +12,11 @@
     .L-skills-box {
       width: 50%;
       border-radius: 25px;
-      background: rgba(255, 255, 255, 0.03);
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.71);
+      background: rgba(143, 143, 143, 0.03);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.21);
       backdrop-filter: blur(13.8px);
       -webkit-backdrop-filter: blur(13.8px);
+
       .L-logo-box {
         width: 85%;
         margin: 20px auto;
@@ -23,7 +24,7 @@
         height: 500px;
         border-radius: 25px;
         overflow: hidden;
-        background: rgba(255, 255, 255, 0.41);
+        background: rgba(255, 255, 255, 0.02);
         backdrop-filter: blur(12.5px);
         -webkit-backdrop-filter: blur(12.5px);
         -moz-box-shadow: inset 2px 20px 50px rgba(154, 147, 140, 0.5),
@@ -33,6 +34,7 @@
         box-shadow: inset 2px 20px 50px rgba(154, 147, 140, 0.5),
           1px 1px 50px rgba(255, 255, 255, 1);
       }
+
       .slider-big {
         text-align: center;
         margin: 0 auto;
@@ -40,8 +42,9 @@
         width: 100%;
 
         .skill-animated-logo {
-          animation: rotateLogo 15s linear infinite;
+          animation: rotateLogo 10s linear infinite;
           position: relative;
+
           &:after {
             content: "";
             border-bottom: 10px solid rgba(#000, 0.2);
@@ -52,6 +55,7 @@
             border-radius: 50%;
             filter: blur(100%);
           }
+
           span {
             font-size: 300px;
           }
@@ -69,6 +73,10 @@
       .slider-little {
         width: 80%;
         margin: 50px auto;
+        .slick-list {
+          height: 90px;
+          background: rgba(255, 255, 255, 0.01);
+        }
         span {
           display: block;
           padding: 15px;
@@ -76,10 +84,17 @@
           font-size: $font-size-50;
           cursor: pointer;
           background: rgba(255, 255, 255, 0.36);
-          border-radius: 5px;
+          border-radius: 15px;
           box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
           backdrop-filter: blur(10.4px);
           -webkit-backdrop-filter: blur(10.4px);
+          transition: 0.3s;
+          margin-right: 15px;
+          &:hover {
+            opacity: 0.7;
+            transition: 0.3s;
+            transform: translateY(10%);
+          }
         }
       }
     }
@@ -89,11 +104,14 @@
 @keyframes rotateLogo {
   0% {
     transform: rotateX(0deg) rotateY(0deg);
+    transition: 2s all;
   }
   50% {
     transform: rotateX(0deg) rotateY(360deg);
+    transition: 2s all;
   }
   100% {
     transform: rotateX(0deg) rotateY(0deg);
+    transition: 2s all;
   }
 }
