--- a/src/assets/icons/style.scss
+++ b/src/assets/icons/style.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?f4k04s');
-  src:  url('fonts/icomoon.eot?f4k04s#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?f4k04s') format('truetype'),
-    url('fonts/icomoon.woff?f4k04s') format('woff'),
-    url('fonts/icomoon.svg?f4k04s#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?flch8f');
+  src:  url('fonts/icomoon.eot?flch8f#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?flch8f') format('truetype'),
+    url('fonts/icomoon.woff?flch8f') format('woff'),
+    url('fonts/icomoon.svg?flch8f#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -28,12 +28,21 @@
 .icon-telegram:before {
   content: "\e90a";
 }
+.icon-linux:before {
+  content: "\e912";
+  color: #fcc624;
+}
+.icon-debian:before {
+  content: "\e911";
+  color: #a81d33;
+}
 .icon-photoshop:before {
   content: "\e910";
   color: #00c8ff;
 }
 .icon-linkedin:before {
   content: "\e90f";
+  color: #0077b5;
 }
 .icon-mail-dot-ru:before {
   content: "\e90d";
@@ -41,6 +50,7 @@
 }
 .icon-gmail:before {
   content: "\e90e";
+  color: #d14836;
 }
 .icon-viber:before {
   content: "\e90b";
