--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -52,6 +52,8 @@ $font-size-36          : 36px;
 $font-size-40          : 40px;
 $font-size-48          : 48px;
 $font-size-50          : 50px;
+$font-size-60          : 60px;
+
 
 
 
