making the box for projects but with bugs

--- a/src/Pages/home/style.scss
+++ b/src/Pages/home/style.scss
@@ -17,7 +17,8 @@
 	  box-shadow    : 0 15px 20px rgba(0, 0, 0, 0.3);
 	  border-radius : 30px;
 	  overflow      : hidden;
-	  border: 10px solid rgba(255,255,255,0.1);
+	  border        : 10px solid rgba(255, 255, 255, 0.1);
+
 	  .img {
 		width  : 450px;
 		height : 500px;
@@ -26,6 +27,7 @@
 
 	}
   }
+
   .L-introducing-container {
 	width   : max-content;
 	margin  : 20px auto;
@@ -33,16 +35,17 @@
 
 
 	h1 {
-	  font-size : $font-size-40;
-	  color     : $white;
-	  text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
+	  font-size   : $font-size-40;
+	  color       : $white;
+	  text-shadow : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
 	  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
 	}
-	h2{
-	  margin-top: 20px;
-	  font-size : $font-size-36;
-	  color: $white;
-	  text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
+
+	h2 {
+	  margin-top  : 20px;
+	  font-size   : $font-size-36;
+	  color       : $white;
+	  text-shadow : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
 	  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
 	}
   }
