--- a/src/assets/style/flex.scss
+++ b/src/assets/style/flex.scss
@@ -24,7 +24,9 @@
 .G-justify-end {
   justify-content : flex-end;
 }
-
+.G-text-align{
+  text-align: center;
+}
 .G-align-center {
   align-items : center;
 }
