--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -2,54 +2,59 @@
 @import "src/assets/style/mixin";
 
 .L-projects-wrapper {
-  width: 100%;
-  height: 100vh;
-  padding-top: 150px;
-  background: rgb(238, 174, 202);
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgb(23, 105, 199) 100%
+  width       : 100%;
+  height      : 100vh;
+  padding-top : 200px;
+  background  : rgb(238, 174, 202);
+  background  : radial-gradient(
+				  circle,
+				  rgba(238, 174	, 202, 1) 0%,
+				  rgb(23, 105, 199) 100%
   );
 
-  .projects-container {
-	display: flex;
-    .card {
-		margin: 100px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      border: 10px solid red;
-      width: 340px;
-      height: 480px;
-      cursor: pointer;
-      &:hover > .front {
-        transform: perspective(600px) rotateY(-180deg);
-      }
-      &:hover > .back {
-        transform: perspective(600px) rotateY(0deg);
-      }
-    }
+  .L-projects-container {
+	margin-top : 20px;
+	width      : 100%;
+	//background-color: red;
+	.card {
+	  width    : 45%;
+	  border   : 10px solid green;
+	  height   : 300px;
+	  position : relative;
+	  cursor   : pointer;
+	  margin   : 20px 0;
 
-    .front,
-    .back {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      backface-visibility: hidden;
-      position: absolute;
-      transition: transform 0.6s linear;
-    }
-    .front img {
-      height: 100%;
-    }
-    .front {
-      transform: perspective(600px) rotateY(0deg);
-    }
-    .back {
-      background: white;
-      transform: perspective(600px) rotateY(180deg);
-    }
+	  &:hover > .front {
+		transform : perspective(1000px) rotateY(-180deg);
+	  }
+
+	  &:hover > .back {
+		transform : perspective(1000px) rotateY(0deg);
+	  }
+	}
+
+	.front,
+	.back {
+	  width               : 100%;
+	  height              : 100%;
+	  overflow            : hidden;
+	  backface-visibility : hidden;
+	  position            : absolute;
+	  transition          : transform 1s ease;
+	}
+
+	.front img {
+	  height : 100%;
+	}
+
+	.front {
+	  transform : perspective(600px) rotateY(0deg);
+	}
+
+	.back {
+	  background : $white;
+	  transform  : perspective(600px) rotateY(180deg);
+	}
   }
+
 }
