--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -53,6 +53,11 @@ $font-size-40          : 40px;
 $font-size-48          : 48px;
 $font-size-50          : 50px;
 $font-size-60          : 60px;
+$font-size-150         : 150px;
+$font-size-200         : 200px;
+$font-size-250         : 250px;
+$font-size-300         : 300px;
+
 
 
 
@@ -60,6 +65,7 @@ $font-size-60          : 60px;
 //page withs
 
 $max-width-1600        : 1600px;
+$max-width-1400        : 1400px;
 $max-width-1300        : 1300px;
 $max-width-1024        : 1024px;
 $max-width-991         : 991px;
