--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -2,168 +2,181 @@
 @import "../../assets/style/mixin";
 
 .L-header-container {
-  width                   : 100%;
-  position                : fixed;
-  top                     : 0;
-  left                    : 0;
-  background              : transparent;
-  box-shadow              : 0 4px 30px $box-shadow-black;
-  backdrop-filter         : blur(14px);
-  -webkit-backdrop-filter : blur(14px);
-  z-index                 : 9999;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: transparent;
+  box-shadow: 0 4px 30px $box-shadow-black;
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  z-index: 9999;
+  @include screen-max-width-1400 {
+    padding: 0 25px;
+  }
   @include screen-max-width-991 {
-    width      : 49%;
-    height     : 100%;
-    display    : flex;
-    left       : unset;
-    right      : 0;
-    bottom     : 0;
-    transform  : translateX(100%);
-    transition : 0.3s all;
+    width: 49%;
+    height: 100%;
+    display: flex;
+    left: unset;
+    right: 0;
+    bottom: 0;
+    transform: translateX(100%);
+    transition: 0.3s all;
   }
 
   .L-header-wrapper {
-    padding : 20px 0;
-    width   : 100%;
+    padding: 20px 0;
+    width: 100%;
     @include screen-max-width-991 {
-      display        : flex;
-      flex-direction : column;
-      align-items    : center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
-
   }
 
   .L-logo-container {
-    width  : max-content;
-    height : 50px;
+    width: max-content;
+    height: 50px;
     @include screen-max-width-991 {
-      justify-self : start;
+      justify-self: start;
     }
 
     .L-logo {
-      width      : 70px;
-      height     : 50px;
-      cursor     : pointer;
-      transition : 0.3s;
+      width: 70px;
+      height: 50px;
+      cursor: pointer;
+      transition: 0.3s;
 
       &:hover {
-        filter : invert(100%);
+        filter: invert(100%);
       }
 
       @include screen-max-width-991 {
-        width  : 100px;
-        height : 70px;
+        width: 100px;
+        height: 70px;
       }
     }
   }
 
   .L-nav-container {
-    width       : 50%;
-    align-items : center;
+    align-items: center;
     @include screen-max-width-991 {
-      width          : 100%;
-      flex-direction : column;
-      align-items    : center;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
     }
 
     .L-nav-lists {
-      width : 100%;
+      width: max-content;
       @include screen-max-width-991 {
-        flex-direction : column;
-        align-items    : center;
+        flex-direction: column;
+        align-items: center;
+      }
+      @include screen-max-width-1400 {
+        font-size: $font-size-20;
       }
 
       li {
-        cursor : pointer;
+        cursor: pointer;
 
         &:hover {
-          justify-content   : center;
-          align-items       : center;
-          background        : green;
-          -webkit-clip-path : polygon(8% 10%, 1% 99%, 92% 87%, 99% 18%);
-          clip-path         : polygon(8% 10%, 1% 99%, 92% 87%, 99% 18%);
+          justify-content: center;
+          align-items: center;
+          background: green;
+          -webkit-clip-path: polygon(8% 10%, 1% 99%, 92% 87%, 99% 18%);
+          clip-path: polygon(8% 10%, 1% 99%, 92% 87%, 99% 18%);
         }
 
         @include screen-max-width-991 {
-          font-size : $font-size-40;
+          font-size: $font-size-40;
         }
-
+    
         a {
-          color          : hotpink;
-          font-size      : $font-size-32;
-          text-shadow    : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
-          1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
-          text-transform : uppercase;
-          letter-spacing : 1px;
-          cursor         : pointer;
-          padding        : 10px 20px;
+          width: max-content;
+          color: hotpink;
+          font-size: $font-size-32;
+          text-shadow: 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
+            1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          cursor: pointer;
+          padding: 10px 20px;
+
           @include screen-max-width-991 {
-            font-size : $font-size-40;
+            font-size: $font-size-40;
+          }
+          @include screen-max-width-767 {
+            font-size: $font-size-36;
+          }
+  
+          @include screen-max-width-576 {
+            font-size: $font-size-28;
           }
         }
 
         .active {
-          color : $white;
+          color: $white;
         }
       }
     }
   }
 }
 .L-header-active {
-  transform : translateX(0);
+  transform: translateX(0);
 }
 
 .L-burger {
-  display : none;
+  display: none;
   @include screen-max-width-991 {
-    display  : block;
-    position : absolute;
-    top      : 50px;
-    left     : 50px;
-    width    : 30px;
-    height   : 30px;
-    z-index  : 10;
+    display: block;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 30px;
+    height: 30px;
+    z-index: 10;
 
     .burger-line {
-      position         : absolute;
-      top              : 50%;
-      display          : block;
-      width            : 30px;
-      height           : 1.5px;
-      background-color : $white;
+      position: absolute;
+      top: 50%;
+      display: block;
+      width: 30px;
+      height: 1.5px;
+      background-color: $white;
 
       &:before {
-        content          : "";
-        position         : absolute;
-        top              : -15px;
-        width            : 100%;
-        height           : 1.5px;
-        background-color : $white;
+        content: "";
+        position: absolute;
+        top: -15px;
+        width: 100%;
+        height: 1.5px;
+        background-color: $white;
       }
 
       &:after {
-        content          : "";
-        position         : absolute;
-        top              : 15px;
-        width            : 100%;
-        height           : 1.5px;
-        background-color : $white;
+        content: "";
+        position: absolute;
+        top: 15px;
+        width: 100%;
+        height: 1.5px;
+        background-color: $white;
       }
     }
   }
 
   .burger-active {
-    transition : 0.3s all;
+    transition: 0.3s all;
 
-    transform  : rotate(135deg);
+    transform: rotate(135deg);
 
     &:before {
-      display : none;
+      display: none;
     }
 
     &:after {
-      top       : 0;
-      transform : rotate(90deg);
+      top: 0;
+      transform: rotate(90deg);
     }
   }
 }
