--- a/src/Pages/home/style.scss
+++ b/src/Pages/home/style.scss
@@ -1,53 +1,70 @@
-@import 'src/assets/style/variables';
-@import 'src/assets/style/mixin';
-
+@import "../../assets/style/variables.scss";
+@import "../../assets/style/mixin";
 
 .L-home-container {
-  width       : 100%;
-  height      : 100vh;
-  padding-top : 200px;
-
+  width: 100%;
+  height: 100vh;
+  padding-top: 200px;
+  @include screen-max-width-767 {
+	padding-top: 250px;
+  }
+  @include screen-max-width-576 {
+    padding-top:  220px;
+  }
   .L-home-wrapper {
+    .L-img-cont {
+      max-width: 420px;
+      width: 100%;
+      height: 500px;
+      background: transparent;
+      box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+      border-radius: 30px;
+      overflow: hidden;
+      border: 10px solid rgba(255, 255, 255, 0.1);
 
-	.L-img-cont {
-	  max-width     : 420px;
-	  width         : 100%;
-	  min-height    : 500px;
-	  background    : transparent;
-	  box-shadow    : 0 15px 20px rgba(0, 0, 0, 0.3);
-	  border-radius : 30px;
-	  overflow      : hidden;
-	  border        : 10px solid rgba(255, 255, 255, 0.1);
-
-	  .img {
-		width  : 450px;
-		height : 500px;
-		margin : 0 auto;
-	  }
-
-	}
+      @include screen-max-width-767 {
+        width: 350px;
+        height: 400px;
+      }
+      @include screen-max-width-576 {
+        width: 280px;
+        height: 350px;
+      }
+      .MyImg {
+        width: 450px;
+        height: 500px;
+        @include screen-max-width-767 {
+          width: 370px;
+          height: 400px;
+        }
+        @include screen-max-width-576 {
+          width: 300px;
+          height: 350px;
+        }
+      }
+    }
   }
 
   .L-introducing-container {
-	width   : max-content;
-	margin  : 20px auto;
-	padding : 15px 10px;
+    width: max-content;
+    margin: 20px auto;
+    padding: 15px 10px;
 
+    h1 {
+      font-size: $font-size-40;
+      color: $white;
+      -webkit-text-stroke: 1.5px black;
+      @include screen-max-width-576 {
+        font-size: $font-size-28;
+      }
+    }
 
-	h1 {
-	  font-size   : $font-size-40;
-	  color       : $white;
-	  text-shadow : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
-	  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
-	}
-
-	h2 {
-	  margin-top  : 20px;
-	  font-size   : $font-size-36;
-	  color       : $white;
-	  text-shadow : 2px 0 black, -2px 0 #000, 0 2px #000, 0 -2px #000,
-	  1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
-	}
+    h2 {
+      margin-top: 20px;
+      font-size: $font-size-36;
+      color: $white;
+      -webkit-text-stroke: 1.7px black;
+      font-size: $font-size-24;
+    }
   }
-
 }
