--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -51,7 +51,7 @@
 
   &:hover {
 	background-color : #fac802;
-	transition       : 0.5s;
+	transition       :  $transition-5;
   }
 }
 .G-input-radio {
