--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -47,12 +47,14 @@ $font-size-18          : 18px;
 $font-size-20          : 20px;
 $font-size-24          : 24px;
 $font-size-28          : 28px;
+$font-size-30          : 30px;
 $font-size-32          : 32px;
 $font-size-36          : 36px;
 $font-size-40          : 40px;
 $font-size-48          : 48px;
 $font-size-50          : 50px;
 $font-size-60          : 60px;
+$font-size-80          : 80px;
 $font-size-150         : 150px;
 $font-size-200         : 200px;
 $font-size-250         : 250px;
@@ -67,12 +69,15 @@ $font-size-300         : 300px;
 $max-width-1600        : 1600px;
 $max-width-1400        : 1400px;
 $max-width-1300        : 1300px;
+$max-width-1200        : 1200px;
 $max-width-1024        : 1024px;
 $max-width-991         : 991px;
 $max-width-767         : 767px;
 $max-width-576         : 576px;
-
+$max-width-440         : 440px;
 // transitions
-$transition            : 0.3s;
-
+$transition-3            : 0.3s ;
+$transition-5            : 0.5s ;
+$transition-1            : 1s ;
+$transition-2            : 2s ;
 
