--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -3,7 +3,7 @@
 
 .L-projects-wrapper {
   width       : 100%;
-  height      : 100vh;
+  height      : 100%;
   padding-top : 200px;
   background  : rgb(238, 174, 202);
   background  : radial-gradient(
@@ -15,6 +15,7 @@
   .L-projects-container {
 	margin-top : 20px;
 	width      : 100%;
+
 
 	.card {
 	  width    : 45%;
@@ -33,7 +34,6 @@
 	  transform : perspective(1000px) rotateY(0deg);
 	  }
 	}
-
 	.front,
 	.back {
 	  width               : 100%;
@@ -41,26 +41,23 @@
 	  overflow            : hidden;
 	  backface-visibility : hidden;
 	  position            : absolute;
-	  transition          : transform  $transition-1 ease;
+	  transition          : transform $transition-1 ease;
 
 	}
-
 	.front img {
 	  height : 100%;
 
 	}
-
 	.front {
 	  .L-projects-slider {
-		border: 1px solid red;
-
-
+		width  : 500px;
+		height : 300px;
 	  }
 
-	  //transform : perspective(600px) rotateY(0deg);
+
+	  transform : perspective(600px) rotateY(0deg);
 
 	}
-
 	.back {
 	  background : $white;
 	  transform  : perspective(600px) rotateY(180deg);
