--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -18,3 +18,8 @@
   font-family : PriceDow;
   font-weight : 400;
 }
+@font-face {
+  src         : url('../fonts/Armenian.OTF');
+  font-family : Armenian;
+  font-weight : 400;
+}
