--- a/src/assets/style/normalize.scss
+++ b/src/assets/style/normalize.scss
@@ -167,7 +167,7 @@ body {
   margin      : 0;
   padding     : 0;
   position    : relative;
-  font-family : PriceDow, sans-serif;
+  font-family : PriceDow;
   font-weight : 400;
   background  : #3494E6; /* fallback for old browsers */
   background  : -webkit-linear-gradient(to right, #EC6EAD, #3494E6); /* Chrome 10-25, Safari 5.1-6 */
