--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -12,11 +12,13 @@
 				  rgba(238, 174, 202, 1) 0%,
 				  rgb(23, 105, 199) 100%
   );
-
   .L-projects-container {
 	margin-top : 20px;
 	width      : 100%;
-
+	@include screen-max-width-991 {
+	  display        : flex;
+	  flex-direction : column;
+	}
 
 	.card {
 	  width         : 45%;
@@ -26,6 +28,22 @@
 	  margin        : 20px 0;
 	  border-radius : 25px;
 	  box-shadow    : 0 4px 30px rgba(0, 0, 0, 0.21);
+	  @include screen-max-width-1300 {
+		width : 48%;
+	  }
+	  @include screen-max-width-991 {
+		width      : 80%;
+		min-height : 400px;
+		margin     : 30px auto;
+	  }
+	  @include screen-max-width-767 {
+		width : 90%;
+
+	  }
+	  @include screen-max-width-576 {
+		width      : 100%;
+		min-height : 300px;
+	  }
 
 
 	  &:hover > .front {
@@ -46,22 +64,23 @@
 		border-radius       : 25px;
 
 	  }
-
 	  .front {
 		-webkit-perspective : none;
 		-moz-perspective    : none;
 		transform           : perspective(none) rotateY(0deg);
 
 	  }
-
 	  .L-slider-img {
-		height              : 300px;
+		min-height          : 300px;
 		background-position : top;
-		background-repeat   : no-repeat;
-		background-size     : 100%;
-
+		@include screen-max-width-991 {
+		  width      : 100%;
+		  min-height : 400px;
+		}
+		@include screen-max-width-576 {
+		  min-height          : 300px;
+		}
 	  }
-
 	  .back {
 		width               : 100%;
 		height              : 100%;
